add recordAudio button to main storyboard

--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -20,6 +20,9 @@
                                 <rect key="frame" x="163" y="318.5" width="49" height="30"/>
                                 <color key="backgroundColor" systemColor="systemPinkColor"/>
                                 <state key="normal" title="Record"/>
+                                <connections>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ux0-pK-DkX"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
